--- a/will-app-deployment.yaml
+++ b/will-app-deployment.yaml
@@ -1,7 +1,7 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
-  name: will-app
+  name: wil-app
 spec:
   replicas: 1
   revisionHistoryLimit: 3
