--- a/wil-app-ingress.yaml
+++ b/wil-app-ingress.yaml
@@ -1,10 +1,7 @@
 apiVersion: networking.k8s.io/v1
 kind: Ingress
 metadata:
-  name: argocd-ingress
-  namespace: argocd
-  annotations:
-    ingress.kubernetes.io/ssl-redirect: "false"
+  name: wil-app-ingress
 spec:
   rules:
   - host: localhost
